# amplifier-collection-issues

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  pyproject.toml
.amplifier/: settings.local.yaml
.amplifier/context/: README.md
.amplifier/context/agents/: README.md  agent-delegation.md  authoring.md
.amplifier/context/amplifier/: README.md  amplifier-as-linux-kernel.md  amplifier.md  kernel-philosophy.md  toolkit-collection.md
.amplifier/context/collections/: README.md  authoring.md  collections.md  specification.md  user-guide.md
.amplifier/context/context/: README.md  context-loading.md
.amplifier/context/design/: README.md
.amplifier/context/design/code/: README.md  core.md
.amplifier/context/design/ux/: README.md
.amplifier/context/llm-assistant-apis/: README.md
.amplifier/context/llm-assistant-apis/anthropic/: images-and-files.md  overview.md  python-examples.md  rest-reference.md  streaming.md  structured-json.md  tools-and-tool-use.md  troubleshooting.md
.amplifier/context/llm-assistant-apis/azure-openai/: images-and-files.md  overview.md  python-examples.md  rest-reference.md  streaming.md  structured-outputs.md  tools-and-function-calling.md  troubleshooting.md
.amplifier/context/llm-assistant-apis/cross-cutting/: agentic-loop-reference.md  images-and-files.md  security-and-governance.md  streaming.md  structured-outputs.md  testing-and-observability.md
.amplifier/context/llm-assistant-apis/ollama/: overview.md  python-examples.md  rest-reference.md  streaming.md  tools-and-function-calling.md  troubleshooting.md
.amplifier/context/llm-assistant-apis/openai/: images-and-files.md  overview.md  python-examples.md  rest-reference.md  streaming.md  structured-outputs.md  tools-and-function-calling.md  troubleshooting.md
.amplifier/context/modules/: README.md  modules.md
.amplifier/context/payne-amplifier/: README.md  dev-guide.md  payne-amplifier.md
.amplifier/context/profiles/: README.md  authoring.md  design.md
ai_working/actor/: DESIGN.md  EXPLORATION_SUMMARY.md  FEEDBACK.md
amplifier-collection-issues/: MANIFEST.in  README.md  __init__.py  pyproject.toml
amplifier-collection-issues/amplifier_collection_issues/: pyproject.toml
amplifier-collection-issues/amplifier_collection_issues/modules/tool-issue/: pyproject.toml
amplifier-collection-issues/amplifier_collection_issues/modules/tool-issue/amplifier_module_tool_issue/: tool.py
amplifier-collection-issues/context/: examples.md
amplifier-collection-issues/profiles/: issue-aware.md
amplifier_collection_issues/: __init__.py  pyproject.toml
amplifier_collection_issues/context/: issue-workflow.md
amplifier_collection_issues/modules/tool-issue/: .gitignore  Makefile  README.md  pyproject.toml
amplifier_collection_issues/modules/tool-issue/amplifier_module_tool_issue/: __init__.py
amplifier_collection_issues/profiles/: issue-aware.md
full-collection/: MANIFEST.in  README.md  pyproject.toml
full-collection/full-collection/: pyproject.toml
full-collection/modules/issue-manager/docs/archive-design/: DEPLOYMENT_GUIDE.md
full-collection/profiles/: README.md  issue-aware.md
full_collection/: README.md  __init__.py  pyproject.toml
full_collection/modules/issue-manager/docs/archive-design/: README.md
full_collection/modules/tool-issue/: pyproject.toml
max_payne_collection/: README.md  __init__.py  pyproject.toml
max_payne_collection/modules/issue-manager/docs/archive-design/: DESIGN_v2.md
max_payne_collection/modules/tool-issue/: README.md  pyproject.toml
max_payne_collection/profiles/: README.md  general.md  issue-aware.md
