[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-collection-issues"
version = "0.1.0"
description = "Issue management collection for Amplifier"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Microsoft", email = "amplifier@microsoft.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.entry-points."amplifier.collections"]
issues = "amplifier_collection_issues:get_collection_info"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_collection_issues"]
include = [
    "amplifier_collection_issues/profiles/*.md",
    "amplifier_collection_issues/context/*.md",
    "amplifier_collection_issues/modules/**/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "/amplifier_collection_issues",
    "/profiles",
    "/context",
    "/README.md",
    "/LICENSE",
]
