[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "payne-amplifier"
version = "0.1.1"
description = "Personal collections and extensions for Microsoft Amplifier"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Paul Payne", email = "paul@payneio.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
repository = "https://github.com/payneio/payne-amplifier"

[tool.hatch.build.targets.wheel]
packages = []
