[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "max-payne-collection"
version = "0.1.1"
description = "Full collection of all payne amplifier components"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Paul Payne", email = "paul@payneio.com" }]

[project.entry-points."amplifier.collections"]
full = "__init__:get_collection_info"

[tool.amplifier.collection]
author = "Paul Payne"
capabilities = [
    "Issue-aware development profile",
    "Persistent issue tracking with dependency management",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
