[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "full-collection"
version = "0.1.0"
description = "Full collection of all payne amplifier components"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.amplifier.collection]
author = "Paul Payne"
capabilities = [
    "Issue-aware development profile",
    "Persistent issue tracking with dependency management",
]
