[project]
name = "amplifier-module-tool-issue"
version = "0.1.0"
description = "Issue management tool module for Amplifier"
requires-python = ">=3.11"
dependencies = [
    "amplifier-core",
]

[project.entry-points."amplifier.modules"]
tool-issue = "amplifier_module_tool_issue:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources.amplifier-core]
path = "../amplifier-core"
editable = true
