[project]
name = "amplifier-module-tool-issue"
version = "0.1.0"
description = "Issue management tool module for Amplifier"
requires-python = ">=3.11"
dependencies = [
    "amplifier-module-issue-manager",
]

[tool.uv.sources.amplifier-module-issue-manager]
git = "https://github.com/payneio/amplifier-collection-issues"
subdirectory = "amplifier_collection_issues/modules/issue-manager"
branch = "main"

[project.entry-points."amplifier.modules"]
tool-issue = "amplifier_module_tool_issue:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
